--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sc-pick",
   "version": "0.0.0",
-  "description": "A pick specified keys from an object",
+  "description": "Pick specified keys from an object",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha"
